# CCIAtlasProj

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  atlas_region.xml  justfile  pyproject.toml  qustions_to_fibics.md  requirements.txt
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
src/CCIAtlasProj/: MainWindow.py  __init__.py  __main__.py  atlas_geometry.py  atlas_region.py  controller.py
src/CCIAtlasProj/data/: atlas_region.xml
src/CCIAtlasProj/qml/: MainWindow.qml
src/cci_atlas_proj/: __main__.py  atlas_geometry.py  atlas_region.py  atlas_region_factory.py  atlas_transform.py  controller.py  image_loader.py  image_widget.py  main_window.py  region_tab_ui.py
src/cci_atlas_proj/data/: Protocols-V1.0.xml  atlas_region.xml
src/cci_atlas_proj/qml/: qmldir
testatlasprojs/00-empty/: empty-project.a5prefs  empty-project.a5proj
testatlasprojs/01-working/: 01-working.a5proj
testatlasprojs/01-working-rec-circ/: 01-working.a5lock  01-working.a5proj
testatlasprojs/01-working-rec-circ/01-working_data/session_1583683056/: grab_1_1456627605.tif
testatlasprojs/01-working-rec-circ/01-working_data/session_1583683056/chips/grab_1_1456627605/: chip_1_0_0.tex  chip_2_0_0.tex  chip_3_0_0.tex  chip_5_0_0.tex
testatlasprojs/atlas_L32-10-1/: atlas_L32-10-1.a5prefs  atlas_L32-10-1.a5proj
testatlasprojs/proj_with_image/: with_image.a5prefs  with_image.a5proj
testatlasprojs/proj_with_image/with_image_data/imported/: import_red.tif.tif
testatlasprojs/proj_with_image_/: with_image.a5prefs  with_image.a5proj
testatlasprojs/proj_with_image_/with_image_data/imported/: import_white_squares.tif.tif  import_white_squares_.tif.tif
testatlasprojs/projs/01-working/: 01-working.a5prefs  01-working.a5proj
testatlasprojs/simple/: simple_image.a5proj
tests/: __init__.py  test_CCIAtlasProj.py
(+14 files in other folders)
