[project]
name = "cci_atlas_proj"
version = "0.1.0"
description = "An applicati for manipulating atlas sem projects"
readme = "README.md"
authors = [
  {name = "Anders Folkesson", email = "anders.folkesson@gu.se"}
]
maintainers = [
  {name = "Anders Folkesson", email = "anders.folkesson@gu.se"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "ccipy.utils",
  "ccipy.atlas"
]
requires-python = ">= 3.10"


[tool.setuptools.packages.find]
where = ["src"]
include = ["cci_atlas_proj*"]
namespaces = true

# include everything under cci_atlas_proj/data in the wheel
[tool.setuptools.package-data]
"cci_atlas_proj" = ["data/**/*"]


[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
    "ruff"
]


[project.urls]
bugs = "https://github.com/xfolka/cci_atlas_proj/issues"
changelog = "https://github.com/xfolka/cci_atlas_proj/blob/master/changelog.md"
homepage = "https://github.com/xfolka/cci_atlas_proj"

[project.scripts]
cci_atlas_proj = "cci_atlas_proj.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",
]
# --- Formatter configuration ---
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false


[tool.uv]
package = true
